--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-router-dom": "^5.0.2",
+    "miragejs": "^0.1.43",
+    "axios": "^0.24.0",
+    "react-toastify": "^8.1.0",
+    "sass": "^1.46.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
